[project]
name = "bytesapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.14",
    "ffmpeg>=1.4",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "supabase>=2.16.0",
    "uvicorn>=0.35.0",
]
